Update source code url

--- a/InteractLineChartSample.html
+++ b/InteractLineChartSample.html
@@ -48,6 +48,6 @@ td {
 <h2 id = 'header2'>Data Table of the Request</h2>
 <!-- "https://rawgit.com/liuwenbindo/tickergrid/master/linechart_ctrl.js" -->
 <div id="datatable"></div>
-<script src = "https://rawgit.com/VenusTechnologyVentures/ticker-grid/master/InteractLineChartCtrl_w_Input.js?token=ASc9Fzg890GvqsIOU4-Vd3PgK-SfCaO_ks5ZrZRnwA%3D%3D" ></script>
+<script src = "https://rawgit.com/liuwenbindo/tickergrid/master/InteractLineChartCtrl_new.js" ></script>
 </body>
 </html>
