Add refresh button

--- a/InteractLineChartSample.html
+++ b/InteractLineChartSample.html
@@ -49,6 +49,7 @@ h1, h2, p, form {
     Product 2: <input type="text" id= "prod2"><br><br>
     Product 3: <input type="text" id= "prod3"><br><br>
     <input type="submit" value="Submit" id = "submitbutton", onclick = "connectToServer(getPrice); return false;">
+    <input type="button" value="New Request" onClick="window.location.reload()">
   </fieldset>
 </form>
 <br>
